- [x] "h" moves to parent instead of scrolling to left
- [x] "l" steps into current folder instead of scrolling to right 


TODO
- [x] make focus current file works
- [x] test all explorer functionality (e.g. "/" etc)
- [x] Go to parent directory
- [x] add help
- [x] highlight ancestors of current selection
- [x] search "N" will hang
- [x] implement rename
- [x] implement close (refer how overlay works)
- [x] implement refresh
- [x] bug: delete file collapsed whole tree
- [x] update documentation
- [x] fix list view
- [x] -/+ to increase or decrease width
- [x] help page overflow 
- [x] preview not showing in small screen
- [x] fix (-/+) overflow
- [x] improve filter UI/UX (should only apply to child not parent)
- [x] bug: "h" does not realign preview
- [x] bug: reveal file does not realign preview
- [] "l" goes back to previous child if any history
- [x] Merge conflicts
- [x] Remove comments
- [x] fix warnings
- [x] refactor, add tree.expand_children() method

New:
- [x] Change '[' to "go to previous root"
- [x] Change 'b' to "go to parent"
- [x] Use C-o for jumping to previous position
- [x] on focus indication
- [x] support creating files and folder and the same time (`mkdir -p`)
- [x] Ctrl-o should work for 'h', 'gg', 'ge', etc
- [x] add unit test for TreeView
- [x] explorer(help): overflow
- [] add integration test for Explorer
- [] search highlight matching word
- [] Error didn't clear
- [] bind "o" to open/close file/folder
- [] should preview be there by default?
- [] Fix panic bugs (see github comments)
- [] Sticky ancestors
- [] explorer(preview): overflow where bufferline is there
- [] explorer(preview): content not sorted
- [] explorer(preview): implement scrolling C-j/C-k